Variables created (firstNumber, operator, secondNumber, result)

--- a/jquery-calculator.html
+++ b/jquery-calculator.html
@@ -78,7 +78,10 @@
 $(document).ready(function() {
 
 // Your code here...
-
+var firstNumber = $("#first-number");
+var operator = $("#operator");
+var secondNumber = $("#second-number");
+var result = $("#result");
 
 });
 
