--- a/jquery-calculator.html
+++ b/jquery-calculator.html
@@ -75,12 +75,12 @@
 
 <script type="text/javascript">
 
-// Your code here...
-var firstNumber = $("#first-number");
-var operator = $("#operator");
-var secondNumber = $("#second-number");
-var result = $("#result");
-=======
+
+
+
+$(document).ready(function() {
+
+
 });
 
 </script>
