rm value from part 4

--- a/jquery-calculator.html
+++ b/jquery-calculator.html
@@ -93,19 +93,19 @@ var b = parseInt()
 //second number
 
 function operation () {
-  if (operator.value === "plus") {
+  if (operator === "plus") {
     return a + b;
   }
-  else if (operator.value === "minus"){
+  else if (operator === "minus"){
     return a - b;
   }
-  else if (operator.value === "times"){
+  else if (operator === "times"){
     return a * b;
   }
-  else if (operator.value === "divide"){
+  else if (operator === "divide"){
     return a / b;
   }
-  else if (operator.value === "power"){
+  else if (operator === "power"){
     return a^b;
   }
 };
