--- a/jquery-calculator.html
+++ b/jquery-calculator.html
@@ -78,21 +78,21 @@
 
 $(document).ready(function() {
 
+//instructions 1 part 1
 var firstNumber = $("#first-number");
 var operator = $("#operator");
 var secondNumber = $("#second-number");
 var result = $("#result");
 
-<<<<<<< HEAD
+//instructions 1 part 2
+
+//instructions 1 part 3
 $(".operator").on("click",function(event){
   operator=$(this).val();
   console.log(operator);
   $("#operator").text(operator);
-  
-})
-=======
 
-//4
+//instructions 1 part 4
 
 //need to define//
 var a = parseInt()
@@ -117,10 +117,8 @@ function operation () {
     return a^b;
   }
 };
-
-
-});
->>>>>>> d3437a28469d0a38f6a3e862e94ca04e871c337f
+  
+})
 
 </script>
 
